react router issue

--- a/package.json
+++ b/package.json
@@ -5,7 +5,10 @@
   "main": "server.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node server.js"
+    "start": "npm-run-all -p run:mongo watch:build watch:server",
+    "run:mongo": "mongod",
+    "watch:build": "webpack -w",
+    "watch:server": "nodemon server.js"
   },
   "repository": {
     "type": "git",
@@ -25,13 +28,15 @@
     "mongoose": "^4.11.11",
     "react": "^15.6.1",
     "react-dom": "^15.6.1",
-    "react-router": "^4.2.0"
+    "react-router": "^4.2.0",
+    "react-router-dom": "^4.2.2"
   },
   "devDependencies": {
     "babel-core": "^6.26.0",
     "babel-loader": "^7.1.2",
     "babel-preset-env": "^1.6.0",
     "babel-preset-react": "^6.24.1",
+    "npm-run-all": "^4.1.1",
     "webpack": "^3.6.0"
   }
 }
